# forward-kitchens

./: .gitignore  README.md  classes_or_functions_exercise.py  dataclasses_exercise.py  functions_exercise.py  project_settings.py  pyproject.toml
crawl/: starter.py
crawl/scrapy_crawl/: handlers.py  middlewares.py  pipelines.py  settings.py
crawl/scrapy_crawl/spiders/: grubhub_spider.py
