[tool.poetry]
name = "forward-kitchens"
version = "0.1.0"
description = "Reverse engineering home task from Forward Kitchens"
authors = ["Anton Shyshko <pozernishku@gmail.com>"]
readme = "README.md"
packages = [{include = "forward_kitchens"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.7.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
